Added 'gb_GCOV=YES' to make commands.
Change-Id: I88f43377c4614e14d4cc34aace0c8b2e3544a302
Reviewed-on: https://gerrit.libreoffice.org/14183
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>

--- a/lcov-report/README
+++ b/lcov-report/README
@@ -96,14 +96,14 @@ EXAMPLE
 
                 lcov-report.sh -b -C /home/user/build -t \
                 /home/user/traces -s /home/user/src/libreoffice \
-		-d "make check"
+                -d "make check"
 
 
         3.) Run tests.
 
                 Now you can run the tests for which you want to report
-                code coverage. This could be as simple as 'make check'
-                in the build directory.
+                code coverage. This could be as simple as 
+                'gb_GCOV=YES make check' in the build directory.
 
 
         4.) Run 'lcov-report.sh -a'.
